--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@ h1{
 .orange-color{
     color: orange;
 }
+
 section{
     display: flex;
+    margin-bottom: 200px;
 }
 .half-width{
     width: 50%;
@@ -31,3 +33,10 @@ section{
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
 }
+
+.derem-big{
+    background-image: url(img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+
+    }
