--- a/style.css
+++ b/style.css
@@ -5,17 +5,22 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
+
 .orange-color{
     color: orange;
 }
 
-section{
-    display: flex;
-    margin-bottom: 200px;
+.flexible-container{
+        display: flex;
+        margin-bottom: 150px;
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
+    
 }
 .half-width img{
     width: 80%;
@@ -40,3 +45,26 @@ section{
     background-position: right;
 
     }
+    .experience-item{
+        width: 40%;
+        margin-left: 5%;
+        margin-right: 5%;
+        padding-left: 20px;
+        border-radius: 10px;
+      
+        box-shadow: 10px 10px 40px gray;
+    }
+    .experience-area{
+        background-image: url(img/exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+    #full-stack-developar{
+        border-left: 7px solid tomato;
+    }
+    #baby-web-developer{
+        border-left: 7px solid blue;
+    }
+   footer p{
+    text-align: center;
+   } 
